--- a/google2c5a6371723bafc1.html
+++ b/google2c5a6371723bafc1.html
@@ -1,1 +1,1 @@
-google-site-verification: google2c5a6371723bafc1.html
+<meta name="google-site-verification" content="NNVJPX93iRI8eljF3KVnHJr02-3npdBrqGhCLgOF6Y4" />
